fixed styles to remove horizontal scroll behavior

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,30 +3,29 @@
     padding: 0;
 }
 
+html {
+    font-size: calc(.65vmin + .35vw);
+}
+
 body {
-    height: 100%;
-    width: 100%;
-    min-height: 100vh;
-    min-width: 100vw;
-    // background-image: linear-gradient(175deg, rgba(20, 0, 24, 0.75) 20%, rgba(0, 4, 24, 0.75), rgba(0, 20, 16, 0.75) 90%), url(../src/assets/starry-sky-2051448.jpg);
     background-color: rgb(255, 253, 235);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center;
+}
+
+app-root {
+    position: absolute;
+    width: 100%;
+    overflow-x: hidden;
 }
 
 app-footer {
     display: flex;
     min-width: 100vw;
+    max-width: 100vw;
     position: fixed;
     left: 0;
     bottom: 0;
     z-index: -1;
     fill: rgb(221, 201, 188);
-}
-
-.body {
 }
 
 .content {
